--- a/ResBaz_KeyStory_2020.html
+++ b/ResBaz_KeyStory_2020.html
@@ -153,7 +153,25 @@ Part of all 'living' things
 
 ---
 
-# The Human Genomics group
+# A snapshot of the Human Genomics group
+
+* **Independent research**
+  * type-2 diabetes &amp; obesity (genomics, epigenetics, protein 'omics)
+  * Guinea pigs! (&lt;span style="color:#3498DB"&gt;&lt;b&gt;Max Berry, University of Otago&lt;/b&gt;&lt;/span&gt;)
+  * empowering people to explore and interpret their data
+
+&lt;br&gt;
+
+* **Clinical diagnostics through genetics**
+  * Contract(s) with CCDHB &lt;span style="color:#3498DB"&gt;&lt;b&gt;Wellington Regional Genetics Lab&lt;/b&gt;&lt;/span&gt;
+  * Providing support to CCDHB for Clinical Genomics GA project (&lt;span style="color:#3498DB"&gt;&lt;b&gt;Stephen Robertson&lt;/b&gt;&lt;/span&gt;)
+
+&lt;br&gt;
+
+* **Clinical research**, in collaboration with local clinician (&lt;span style="color:#3498DB"&gt;&lt;b&gt;Richard Carroll&lt;/b&gt;&lt;/span&gt;) - hyperparathyroidism
+  * sequencing 100 exomes
+  * engaging clinicians from other DHBs
+  * exploring the replacement of gene panels with exome/genome
 
 ---
 class: middle
@@ -509,8 +527,8 @@ Most Jetson devices have the ability to be put into different power modes
 
 &lt;br&gt;
 
-<div id="htmlwidget-fab00a9c25b7b0df7220" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-fab00a9c25b7b0df7220">{"x":{"filter":"none","fillContainer":false,"data":[["10W","15W","30W 2 cores","30W 4 cores","30W MAX (8 cores)"],["33.4 mins","14.3 mins","10.8 mins","10.8 mins","7.5 mins"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Power.mode<\/th>\n      <th>Time<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-be5723ca3b9007463774" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-be5723ca3b9007463774">{"x":{"filter":"none","fillContainer":false,"data":[["10W","15W","30W 2 cores","30W 4 cores","30W MAX (8 cores)"],["33.4 mins","14.3 mins","10.8 mins","10.8 mins","7.5 mins"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Power.mode<\/th>\n      <th>Time<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 .small[
 ***Note:*** this table represents basecalling performed when running on a portable powerbank.
 ]
@@ -526,8 +544,8 @@ class: top
 
 ## Very rough comparison of Nvidia ecosystem&lt;sup&gt;#&lt;/sup&gt;
 
-<div id="htmlwidget-7d86d5454c31e6a75743" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7d86d5454c31e6a75743">{"x":{"filter":"none","fillContainer":false,"data":[["Jetson Nano","Jetson Xavier NX*","Jetson Xavier","Geforce 1080 Ti","Geforce 2080 Ti","Titan RTX","Tesla V100"],["~0.5","6","11","11.3","~13-14","16.3","16.4"],["$99","$399","$699","~$650","~$800-$1000","~$3000","~$8500"],["5-10W","10-15W","10-30W","215W","250W","280W","250W"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Card<\/th>\n      <th>TFLOPS<\/th>\n      <th>Price<\/th>\n      <th>Power<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-bec8ea12f13ef51c6b97" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-bec8ea12f13ef51c6b97">{"x":{"filter":"none","fillContainer":false,"data":[["Jetson Nano","Jetson Xavier NX*","Jetson Xavier","Geforce 1080 Ti","Geforce 2080 Ti","Titan RTX","Tesla V100"],["~0.5","6","11","11.3","~13-14","16.3","16.4"],["$99","$399","$699","~$650","~$800-$1000","~$3000","~$8500"],["5-10W","10-15W","10-30W","215W","250W","280W","250W"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Card<\/th>\n      <th>TFLOPS<\/th>\n      <th>Price<\/th>\n      <th>Power<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
 .small[Price in USD]  
 .small[&lt;sup&gt;#&lt;/sup&gt; a very small selection of what Nvidia offers obviously!]  
