--- a/ResBaz_KeyStory_2020.html
+++ b/ResBaz_KeyStory_2020.html
@@ -174,7 +174,7 @@ Part of all 'living' things
   * exploring the replacement of gene panels with exome/genome
 
 ---
-class: middle
+class: middle center
 
 # A big part of what we do is sequencing
 
@@ -388,7 +388,7 @@ class: middle
 ---
 class: top
 
-# case study
+# a personal story
 
 .large[
 &lt;br&gt;
@@ -410,7 +410,7 @@ class: top
 ---
 class: top
 
-# case study
+# a personal story
 
 .large[
 ... imagine a more ‘real-time’ procedure:
@@ -447,8 +447,8 @@ Stress how fast and low cost this has the potential to be.
 # Standing by for live transmission...
 
 &lt;p style="border:solid thick grey; border-radius: 0.5em; 
-          border-width:5px; padding-left:9px; padding-top:6px; 
-          padding-bottom:6px; margin:0px auto; width:710px; height:540px;"&gt;
+          border-width:5px; padding-left:9px; padding-top:6px; align-items: center; display: flex; justify-content:center;
+          padding-bottom:6px; margin:0px auto; width:710px; height:540px;"&gt;&lt;i&gt;... live video content ...&lt;/i&gt;&lt;/p&gt;
 
 ---
 class: top
@@ -528,8 +528,8 @@ Most Jetson devices have the ability to be put into different power modes
 
 &lt;br&gt;
 
-<div id="htmlwidget-391596165cc0b09326b5" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-391596165cc0b09326b5">{"x":{"filter":"none","fillContainer":false,"data":[["10W","15W","30W 2 cores","30W 4 cores","30W MAX (8 cores)"],["33.4 mins","14.3 mins","10.8 mins","10.8 mins","7.5 mins"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Power.mode<\/th>\n      <th>Time<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-f7668e77cff436a1aaed" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-f7668e77cff436a1aaed">{"x":{"filter":"none","fillContainer":false,"data":[["10W","15W","30W 2 cores","30W 4 cores","30W MAX (8 cores)"],["33.4 mins","14.3 mins","10.8 mins","10.8 mins","7.5 mins"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Power.mode<\/th>\n      <th>Time<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 .small[
 ***Note:*** this table represents basecalling performed when running on a portable powerbank.
 ]
@@ -545,8 +545,8 @@ class: top
 
 ## Very rough comparison of Nvidia ecosystem&lt;sup&gt;#&lt;/sup&gt;
 
-<div id="htmlwidget-456fe3e474437f6e9930" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-456fe3e474437f6e9930">{"x":{"filter":"none","fillContainer":false,"data":[["Jetson Nano","Jetson Xavier NX*","Jetson Xavier","Geforce 1080 Ti","Geforce 2080 Ti","Titan RTX","Tesla V100"],["~0.5","6","11","11.3","~13-14","16.3","16.4"],["$99","$399","$699","~$650","~$800-$1000","~$3000","~$8500"],["5-10W","10-15W","10-30W","215W","250W","280W","250W"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Card<\/th>\n      <th>TFLOPS<\/th>\n      <th>Price<\/th>\n      <th>Power<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-d97e06b1f2fff533d841" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-d97e06b1f2fff533d841">{"x":{"filter":"none","fillContainer":false,"data":[["Jetson Nano","Jetson Xavier NX*","Jetson Xavier","Geforce 1080 Ti","Geforce 2080 Ti","Titan RTX","Tesla V100"],["~0.5","6","11","11.3","~13-14","16.3","16.4"],["$99","$399","$699","~$650","~$800-$1000","~$3000","~$8500"],["5-10W","10-15W","10-30W","215W","250W","280W","250W"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Card<\/th>\n      <th>TFLOPS<\/th>\n      <th>Price<\/th>\n      <th>Power<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
 .small[Price in USD]  
 .small[&lt;sup&gt;#&lt;/sup&gt; a very small selection of what Nvidia offers obviously!]  
@@ -688,8 +688,8 @@ class: hide_logo
 # Let's take a tour...
 
 &lt;p style="border:solid thick grey; border-radius: 0.5em; 
-          border-width:5px; padding-left:9px; padding-top:6px; 
-          padding-bottom:6px; margin:0px auto; width:710px; height:540px;"&gt;
+          border-width:5px; padding-left:9px; padding-top:6px; align-items: center; display: flex; justify-content:center;
+          padding-bottom:6px; margin:0px auto; width:710px; height:540px;"&gt;&lt;i&gt;... live video content ...&lt;/i&gt;&lt;/p&gt;
 
 ---
 
