added REANNZ talk updates

--- a/REANNZ_2020.html
+++ b/REANNZ_2020.html
@@ -31,7 +31,7 @@ class: center, middle, inverse, title-slide
 ### <div class="line-block"><a href="https://twitter.com/miles_benton">Miles Benton</a><br />
 Institute of Environmental Science and Research (ESR)<br />
 <br />
-.large[<b>Auckland Research Bazaar</b>, 24<small><sup>th</sup></small> November 2020]<br />
+.large[<b>REANNZ Visit</b>, 11<small><sup>th</sup></small> December 2020]<br />
 <br />
 <br />
 .center[<img src="images/ESR_SFC_logo.png" style="width: 25%; border: 3px solid white;"/>]</div>
@@ -556,8 +556,8 @@ Most Jetson devices have the ability to be put into different power modes
 
 &lt;br&gt;
 
-<div id="htmlwidget-f78890ea1dd0d639b964" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-f78890ea1dd0d639b964">{"x":{"filter":"none","fillContainer":false,"data":[["10W","15W","30W 2 cores","30W 4 cores","30W MAX (8 cores)"],["33.4 mins","14.3 mins","10.8 mins","10.8 mins","7.5 mins"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Power.mode<\/th>\n      <th>Time<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-a07bc08d2e1c235b1d2b" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-a07bc08d2e1c235b1d2b">{"x":{"filter":"none","fillContainer":false,"data":[["10W","15W","30W 2 cores","30W 4 cores","30W MAX (8 cores)"],["33.4 mins","14.3 mins","10.8 mins","10.8 mins","7.5 mins"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Power.mode<\/th>\n      <th>Time<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 .small[
 ***Note:*** this table represents basecalling performed when running on a portable powerbank.
 ]
@@ -573,8 +573,8 @@ class: top
 
 ## Very rough comparison of Nvidia ecosystem&lt;sup&gt;#&lt;/sup&gt;
 
-<div id="htmlwidget-36a7dc40fa1889690143" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-36a7dc40fa1889690143">{"x":{"filter":"none","fillContainer":false,"data":[["Jetson Nano","Jetson Xavier NX*","Jetson Xavier","Geforce 1080 Ti","Geforce 2080 Ti","Titan RTX","Tesla V100"],["~0.5","6","11","11.3","~13-14","16.3","16.4"],["$99","$399","$699","~$650","~$800-$1000","~$3000","~$8500"],["5-10W","10-15W","10-30W","215W","250W","280W","250W"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Card<\/th>\n      <th>TFLOPS<\/th>\n      <th>Price<\/th>\n      <th>Power<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-ff45965f6a8c58222628" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-ff45965f6a8c58222628">{"x":{"filter":"none","fillContainer":false,"data":[["Jetson Nano","Jetson Xavier NX*","Jetson Xavier","Geforce 1080 Ti","Geforce 2080 Ti","Titan RTX","Tesla V100"],["~0.5","6","11","11.3","~13-14","16.3","16.4"],["$99","$399","$699","~$650","~$800-$1000","~$3000","~$8500"],["5-10W","10-15W","10-30W","215W","250W","280W","250W"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Card<\/th>\n      <th>TFLOPS<\/th>\n      <th>Price<\/th>\n      <th>Power<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
 .small[Price in USD]  
 .small[&lt;sup&gt;#&lt;/sup&gt; a very small selection of what Nvidia offers obviously!]  
@@ -801,22 +801,6 @@ Richard Dean (ESR)
 Shane Sturrock (ESR)  
 Russell Smithies (ESR)  
 ]]
-
----
-class: middle
-
-.center[Don't miss the workflow best practice workshop later this week!]
-
-&lt;article class="mw5 center bg-white br3 pa3 pa4-ns mv3 ba b--black-10"&gt;
-  &lt;div class="tc"&gt;
-    &lt;img src="images/Leah.jpeg" class="br-100 h4 w4 dib ba b--black-05 pa2" title="Photo of team member"&gt;
-    &lt;h4 class="f3 mb2"&gt;Leah Kemp&lt;/h4&gt;
-    &lt;h4 class="f5 fw4 gray mt0"&gt;(ESR)&lt;/h4&gt;
-    &lt;h4 class="f5 fw4 gray mt0"&gt;Workflow languages – your foundation for accuracy and reproducibility in data analysis&lt;/h4&gt;
-    &lt;h4 class="f5 fw4 gray mt0"&gt;&lt;b&gt;Date:&lt;/b&gt; Friday 27 November 2020&lt;/h4&gt; 
-    &lt;h4 class="f5 fw4 gray mt0"&gt;&lt;b&gt;Time:&lt;/b&gt; 2:30pm - 3:30pm&lt;/h4&gt;
-  &lt;/div&gt;
-&lt;/article&gt;
 
 ---
 class: middle hide_logo
